tests/snapshots/triage_eval__grafana_firing_batch_0.snap
---
source: tests/triage_eval.rs
expression: result
---
severity: P1
service: checkout
tags:
  - error
  - rate
  - checkout
summary: Checkout service has a 5xx error rate exceeding 2%.
