tests/snapshots/triage_eval__grafana_firing_batch_1.snap
---
source: tests/triage_eval.rs
expression: result
---
severity: P1
service: payments
tags:
  - error
  - rate
  - payments
summary: High 5xx error rate (2%) detected in payments service
