tests/snapshots/triage_eval__pagerduty_acknowledged_0.snap
---
source: tests/triage_eval.rs
expression: result
---
severity: P1
service: checkout
tags:
  - http
  - error
  - checkout
summary: 5xx error rate exceeds 2% on checkout service
