tests/snapshots/triage_eval__pagerduty_resolved_0.snap
---
source: tests/triage_eval.rs
expression: result
---
severity: P1
service: checkout
tags:
  - http
  - checkout
  - rate
summary: Checkout service is experiencing 5xx errors above 2% threshold
